syntax = "proto3";
package pdict;

option go_package = "/pdict";

message PDictSet {
    string id = 1;
    string key = 2;
    Values values = 3;
}

message Values {
    repeated double values = 1;
}

message PDictVal {
    map<string, Values> val = 1;
}

message DictSetOp {
    string key = 1;
    repeated double value = 2;
}